infra/k8s-prod/ingress-srv.yaml
# This part is called the "Ingress Resource"
# Here we specify routing rules
# We create an Ingress resource called 'ingress-srv' and route traffic based on host header.
# 
# networking.k8s.io/v1beta1 == 1.14 to 1.18
# networking.k8s.io/v1 = 1.19+
# networking.k8s.io/v1beta1 Ingress is deprecated in v1.19+, unavailable in v1.22+

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  # tells the ingress controller to understand that we are providing routing rules
  # the ingress controller continuously scans the all config files for the annotation
  # specified below.
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    # specify the hosts for which we want to acquire certificates
  - hosts:
    - thelarsson.com
    # This secret will contain the TLS private key and issued certificate
    secretName: letsencrypt-prod
  rules:
    # specifies that the routing rules are tied to the app at posts.com
    # a kubernetes cluster can host many domains/apps
    #
    # This is an nginx server block that proxy pass traffic
    # on ticketing.dev -> internal service
    # and it's the kubernetes network that knows about the services,
    # that is the DNS of our internal cluster ip services.
    #
    # ingress controller only supports routes, not the type.
    #
    # Matching is done in the order we specify here.
    #
    - host: thelarsson.com
      http:
        paths:
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv
              servicePort: 3000
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-srv
              servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
